# win_pty

./: Cargo.toml  README.md
src/: main.rs
xterm-win-pty/: package-lock.json  package.json
xterm-win-pty/src/: App.tsx  terminal.tsx
xterm-win-pty/src-tauri/: Cargo.toml  tauri.conf.json
xterm-win-pty/src-tauri/src/: lib.rs  main.rs
