[package]
name = "win_pty"
version = "0.1.0"
edition = "2024"

[dependencies]
simple_logger = "1.16"
log = "0.4"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_Environment",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Memory"
] }